templates/eap/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}
  namespace: ${NAMESPACE}
  labels:
    app.kubernetes.io/name: ${APP_NAME}
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app.kubernetes.io/name: ${APP_NAME}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${APP_NAME}
    spec:
      containers:
        - name: ${APP_NAME}
          image: image-registry.openshift-image-registry.svc:5000/${NAMESPACE}/${APP_NAME}:${OUTPUT_IMAGE_TAG}
          ports:
            - containerPort: 8080
